--- a/src/components/card-list/index.css
+++ b/src/components/card-list/index.css
@@ -1,18 +1,10 @@
-.card-list{
-    display:grid;
+.card-list {
+    width: 80%;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap:20px;
-    margin:0 auto;
+    grid-gap: 20px;
+    margin: 0 auto;
     width: 85vw;
-    background-color:lightblue;
-    
-    
-  
-}
+    background-color: lightblue;
 
-@media (max-width:550px){
-  .card-list{
-    grid-template-columns:1fr 1fr 1fr;
-    
-  }
 }
