--- a/src/components/card-list/index.css
+++ b/src/components/card-list/index.css
@@ -1,10 +1,9 @@
 .card-list {
-    width: 80%;
+    width: 98%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
     grid-gap: 20px;
     margin: 0 auto;
-    width: 85vw;
     background-color: lightblue;
 
 }
